// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chip renders correctly 1`] = `
.c1 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
}

.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F3F2FF;
  border-radius: 4px;
  color: #7a55e3;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.75rem;
  font-weight: 600;
  height: 28px;
  max-width: 320px;
  min-width: 44px;
  padding: 0.25rem 0.5rem;
}

.c0:hover,
.c0:active,
.c0:focus,
.c0[aria-selected='true'] {
  background: #E8E5FF;
}

.c0.focus,
.c0:focus {
  outline: none;
}

.c0:active {
  border-color: #6C43E0;
}

.c0[disabled] {
  background: #F5F6F7;
  color: #71767a;
}

.c0[disabled]:hover {
  background: #F5F6F7;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<span
  className="c0 "
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  tabIndex={0}
>
  <span
    className="c1 c2"
  >
    chip
  </span>
</span>
`;

exports[`Chip renders disabled 1`] = `
.c1 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
}

.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F3F2FF;
  border-radius: 4px;
  color: #7a55e3;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.75rem;
  font-weight: 600;
  height: 28px;
  max-width: 320px;
  min-width: 44px;
  padding: 0.25rem 0.5rem;
}

.c0:hover,
.c0:active,
.c0:focus,
.c0[aria-selected='true'] {
  background: #E8E5FF;
}

.c0.focus,
.c0:focus {
  outline: none;
}

.c0:active {
  border-color: #6C43E0;
}

.c0[disabled] {
  background: #F5F6F7;
  color: #71767a;
}

.c0[disabled]:hover {
  background: #F5F6F7;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<span
  className="c0 "
  disabled={true}
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
>
  <span
    className="c1 c2"
  >
    chip
  </span>
</span>
`;
